# quantum-computing-practice

./: .gitignore  README.md  note.md
qiskit/: README.md  environment.yml  pyproject.toml  requirements.txt
qiskit/notebooks/coding_with_qiskit/: 01_setup.ipynb  02_hello_world.ipynb  03_building_blocks.ipynb  04_quantum_teleportation.ipynb  05_Bernstein-Vazirani_algorithm.ipynb  06_measurement_error_mitigation.ipynb  README.md
yao/: Manifest.toml  README.md
